# eyetrackvr-server

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
android/: manifest.patch.xml  openxr-layer.json  patch_manifest.py
src/: android.rs  android_openxr_layer.rs  android_serial_watcher.rs  android_standalone.rs  app.rs  camera.rs  camera_dispatcher.rs  camera_manager.rs  camera_server.rs  camera_sources.rs  camera_texture.rs  data_processing.rs  desktop.rs  frame_server.rs  inference.rs  lib.rs  logging.rs  main.rs  openxr_output.rs  osc_sender.rs  structs.rs  ui.rs  window.rs  window_android.rs  window_desktop.rs
src/camera_sources/: http_camera_source.rs  mod.rs  serial_camera_source.rs  uvc_camera_source.rs
src/openxr_layer/: EXT_META_boundary_visibility.rs  dispatch.rs  input.rs  layer.rs  mod.rs  modules.rs  raycast.rs
