[package]
name = "eyetrackvr-server"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android-usbser = { version = "0.2.3", optional = true }
async-broadcast = "0.7.0"
chrono = "0.4.33"
clap = { version = "4.5.4", features = ["derive"] }
const_format = "0.2.34"
env_logger = "0.11.1"
futures = "0.3.30"
glow = "0.16.0"
hex-literal = "1.0.0"
# hidapi = { version = "2.6.3", default-features = false, features = ["linux-native"] }
hyper = { version = "=0.14.32", features = ["client", "server", "http1", "stream", "tcp"] }
image = "0.25.6"
imgui = { version = "0.12.0", optional = true }
imgui-wgpu = { version = "0.25.0", optional = true }
jni = { version = "0.21.1", optional = true }
khronos-egl = "6.0.0"
log = "0.4.27"
mime = "0.3.17"
multipart-stream = "0.1.2"
ndarray = "0.16.1"
ndk-context = "0.1.1"
nokhwa = { version = "0.10.7", default-features = false, features = ["input-native"]}
once_cell = "1.21.3"
one-euro-rs = { git = "https://github.com/pembem22/one-euro-rs.git", branch = "develop" }
openxr = "0.19.0"
openxr-sys = { version = "0.11.0", optional = true }
ort = { version = "=2.0.0-rc.10", optional = true }
ort-sys = { version = "=2.0.0-rc.10", default-features = false, optional = true }
pollster = "0.4.0"
quaternion-core = "0.5.4"
rosc = "0.11.4"
serde_json = "1.0.116"
tokio = { version = "1.35.1", features = ["full"] }
tokio-serial = "5.4.4"
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["codec"] }
wgpu = { version = "25.0.2", optional = true }

[target.'cfg(windows)'.dependencies]
winit = { version = "0.30.11", optional = true }
imgui-winit-support = { version = "0.13.0", optional = true }

[features]
# TODO: look into VSCode Rust extension configuration to avoid enabling everything by default.
default = ["inference", "gui", "openxr-api-layer", "android", "desktop"]
inference = ["dep:ort", "dep:ort-sys"]
gui = ["dep:imgui", "dep:imgui-wgpu", "dep:imgui-winit-support", "dep:wgpu", "dep:winit"]
openxr-api-layer = ["dep:openxr-sys"]
android = ["dep:jni", "dep:android-usbser"]
desktop = [] # Or should I name it "standalone"?

[patch.crates-io]
# https://github.com/berkowski/mio-serial/issues/41
mio-serial = { git = "https://github.com/pembem22/mio-serial.git", branch = "fix-stop-bits" }
# https://github.com/Yatekii/imgui-wgpu-rs/pull/124
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs", rev = "7408a75" }
# This patch removes all EGL context switching from inside of wgpu-hal.
wgpu = { git = "https://github.com/pembem22/wgpu", branch = "v25.0.2-egl-manual-context" }
# Fix missing linking lib on Android
ort = { git = "https://github.com/pembem22/ort", branch = "main" }
ort-sys = { git = "https://github.com/pembem22/ort", branch = "main" }
# Add errno to Fault error
nusb = { git = "https://github.com/pembem22/nusb", branch = "v0.1" }


